--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,9 @@
 <h2 id="title">Welcome to Ember</h2>
 
+{{from-elsewhere name="hello"}}
+
+{{#to-elsewhere named="hello"}}
+  Hillol
+{{/to-elsewhere}}
+
 {{outlet}}
